sources/spring-cloud-gateway/gateway-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  namespace: template-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      name: gateway-pod
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway-container
          image: esperimentesi/gateway
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 250
            periodSeconds: 5
