sources/spring-cloud-gateway/gateway-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-svc
  namespace: template-ns
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
    - port: 8080
      targetPort: 8080
#      nodePort: 30001
