sources/spring-cloud-gateway/gateway-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ing
  namespace: template-ns
spec:
  rules:
    - host: app
      http:
        paths:
          - path: /
            backend:
              serviceName: gateway-svc
              servicePort: 8080
